--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <p>This section is dedicated to displaying physicians working in Saskatoon.
             <br>Click to see physician's profile, whether accepting new patients, post comments and make an
             <ins>appointment</ins>!
+            <button  onclick="$('#hall_show').css('background-color','yellow')">YELLOW</button>
         </p>
         
         <div id='phyFile' style='margin: 60px;' hidden>
