mock complaints page and start the comments and rating page

--- a/temp.html
+++ b/temp.html
@@ -57,6 +57,8 @@
      <input type="checkbox" name="" id="" checked>date: 2018-02-21 time:09:00 <br>
      <input type="checkbox" name="" id="">date: 2018-02-21 time:09:00
      <input type="button" value='Delete' style="margin-right: 0mm;padding-right: 0mm">
+    <input type="email" name="" id="">
+    <input type="week" name="" id="">
     </form>
     </div>
     <script>
